# cli-pong

./: .gitignore  CMakeLists.txt  README.md
include/: ball.h  config.h  console.h  directions.h  game.h  level.h  menu.h  paddle.h  position.h  random.h
src/: ball.cpp  console.cpp  game.cpp  level.cpp  main.cpp  menu.cpp  paddle.cpp
